# dlpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
resource/model/: mnist_cnn_model.json  mnist_fc_model.json  mnist_model.json  mnist_model_cnn_0.99.json  mnist_model_fc_0.98.json  xor_model.json
src/: LossFunction.h  MLP.cpp  MLP.h  Network.h  NetworkBuilder.h  Optimizer.h  ResourceManager.h  Serializer.h  ThreadPool.h  types.h
src/executables/: mnist_train.cpp  xor_train.cpp
src/helper/: Cifar10Data.h  CifarData.h  EigenHelper.h  ImageDataset.h  MNISTData.h  MNISTLoader.h  Serializer.h
src/layers/: AveragePoolingLayer.h  BaseLayer.h  BatchNormLayer.h  Conv2DLayer.h  ConvUtil.h  DropoutLayer.h  FlattenLayer.h  FullyConnectedLayer.h  LReLULayer.h  MaxPoolingLayer.h  ReLULayer.h  SigmoidLayer.h
src/layers/activations/: LReLULayer.h  ReLULayer.h  SigmoidLayer.h  SoftmaxLayer.h  TanhLayer.h
src/layers/base/: BaseActivation.h  BaseLayer.h  BasePoolingLayer.h  Exceptions.h
src/lossfunction/: lossFunction.h
test/: cifar10_test.cpp  mnist_test.cpp  xor_test.cpp
train/: cifar10_train.cpp  cifar10_train_cnn.cpp  mnist_train_cnn.cpp  mnist_train_conv.cpp  mnist_train_fc.cpp  xor_train.cpp
